tests/NormalTests/paczka1/fuzzy1/49571821.err
Error in line 1: jDLH5o A817 55,8
Error in line 2: 7PUbIP A817 96,0
Error in line 10: E6z9O3Kq S905 72,4
Error in line 21: jDLH5o A817 0,8
Error in line 30: 2QuB1qEQ7 S905 44,0
Error in line 33: 2QuB1qEQ7 A817 70,4
